fix layout issue in after selecting deck in game lobby

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1097,7 +1097,6 @@ nav ul
         line-height: 22px
 
       .label
-        display: inline-block
         text-align: center
         color: inherit
         border-color: inherit
@@ -1106,7 +1105,7 @@ nav ul
         white-space: nowrap
         overflow: hidden
         max-width: 187px
-  
+
       .fake-link
         margin-left: 10px
 
